apps/project_front/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-ui-dep
  namespace: todo-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-ui
  template:
    metadata:
      labels:
        app: todo-ui
    spec:
      containers:
        - name: todo-ui
          image: PROJECT/IMAGE
          resources:
            limits:
              cpu: "150m"
              memory: "100Mi"
