apps/project_front/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-ui-svc
  namespace: todo-namespace
spec:
  type: NodePort
  selector:
    app: todo-ui
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8090
